Update and rename phantom-master/_config.yml to _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -13,18 +13,18 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "Hello. I'm Jami Gibbs."
-email: 'jami0821@gmail.com'
-description: "I'm a software developer and designer from Chicago creating useful things for the web."
+title: "Hello. I'm Sohini Dutta."
+email: 'sohinidutta97@gmail.com'
+description: "I am an Astronomy student pursuing a Master’s at the Department of Astronomy, Astrophysics and Space Engineering, Indian Institute of Technology, Indore. Currently, I am engaged in a year-long research project leading to a thesis at the end of my degree. My present research interests lie in the field of Cosmology, particularly in the areas of Galaxy Evolution, Cosmic Dawn, the Epoch of Reionization etc."
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://jamigibbs.github.io/phantom" # the base hostname & protocol for your site, e.g. https://example.com
-twitter_username: 'jamigibbs'
-github_username: 'jamigibbs'
-medium_username: 'blog.jamigibbs.com'
+url: "https://sohinixcvii.github.io/phantom" # the base hostname & protocol for your site, e.g. https://example.com
+twitter_username: 'sohinixcvii'
+github_username: 'sohinixcvii'
+medium_username: 'https://thiswonderfulcosmos.wordpress.com/blog/'
 
 # Build settings
 markdown: kramdown
-# theme: phantom # Uncomment once published to RubyGems
+theme: phantom # Uncomment once published to RubyGems
 plugins:
   - jekyll-paginate-v2
 
